<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.google.codelab.smartlock.ChangeCredActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username1TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/username1EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username1_hint"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password1TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username1TextInputLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <EditText
            android:id="@+id/password1EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password1_hint"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username2TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password1TextInputLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <EditText
            android:id="@+id/username2EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username2_hint"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password2TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username2TextInputLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <EditText
            android:id="@+id/password2EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password2_hint"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username3TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password2TextInputLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <EditText
            android:id="@+id/username3EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username3_hint"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password3TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username3TextInputLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <EditText
            android:id="@+id/password3EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password3_hint"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creds_save_button_text"
        android:id="@+id/saveButton"
        android:layout_below="@+id/password3TextInputLayout"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
